--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -33,4 +33,10 @@ jobs:
    - name: Testes E2E (end-to-end)
      run: yarn run e2e
 
+    - name: actions/upload-artifac@v4
+      with:
+      name:relatorio-de-testes
+      path: ./playwright-report
+  
+
      
