--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -33,10 +33,16 @@ jobs:
    - name: Testes E2E (end-to-end)
      run: yarn run e2e
 
+
+
+
+  #passed, failed, cancelled
     - name: actions/upload-artifac@v4
+      if: ${{ !cancelled() }}
       with:
-      name:relatorio-de-testes
-      path: ./playwright-report
+        name: relatorio-de-testes
+        path: ./playwright-report
+
   
 
      
